Fix blur overflowing to nav section

--- a/public/home.css
+++ b/public/home.css
@@ -19,8 +19,9 @@ nav{
   opacity: 1;
 }
 .f1{
-  padding-bottom: 10px;
+  margin-top: -140px;
   opacity: 1;
+
 }
 .ff1{
   margin-right: 5px;
@@ -28,11 +29,9 @@ nav{
 .f2{
   color: Black;
   font-weight: bold;
+  text-shadow: 2px 2px 6px white;
   opacity: 1;
   padding: 10px;
-}
-.f1,.f2{
-  text-shadow: 2px 2px 6px white;
 }
 .inReg{
   width: 250px;
@@ -42,6 +41,7 @@ nav{
   background-size:100% 100%;
   background-repeat: no-repeat;
   height: 100%;
+  margin-top: 10px;
   -webkit-filter: blur(6px);
 }
 .overlay2{
@@ -53,7 +53,7 @@ nav{
 .updateDays{
   display: block;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .userLogin, .btn-group{
   padding-top: 15px;
@@ -75,4 +75,7 @@ nav{
   position: relative;;
   top: -60px;
   left: 986px;
+}
+.heading{
+  padding-bottom: 10px;
 }
